# CSN-371-Project

./: .gitignore  README.md  cfg.py  links.md  main.py  requirements.txt
analysis/: __init__.py  getToppers.py  plotter.py
common/: __init__.py  dirwalk.py  getdictionary.py  judge.py  matrix.py  utility.py
dict_processor/: __init__.py  dictprocessor.py
model/: __init__.py  base_model.py  matrix.py  tagger.py
processed_data/test/AN/: AN0.txt  AN1.txt  AN2.txt  AN3.txt  AN4.txt  AN5.txt  AN7.txt  AN8.txt  AN9.txt  ANA.txt  ANB.txt  ANC.txt  AND.txt  ANF.txt  ANH.txt  ANJ.txt  ANK.txt  ANL.txt  ANM.txt  ANP.txt  ANR.txt  ANS.txt  ANT.txt  ANU.txt  ANX.txt  ANY.txt
processed_data/test/AP/: AP0.txt  AP1.txt  AP5.txt  AP6.txt  AP7.txt  AP8.txt  APC.txt  APD.txt  APE.txt  APH.txt  APJ.txt  APK.txt  APL.txt  APM.txt  APN.txt  APP.txt  APR.txt  APS.txt  APT.txt  APU.txt  APV.txt  APW.txt  APX.txt
processed_data/test/AR/: AR0.txt  AR2.txt  AR3.txt  AR4.txt  AR5.txt  AR7.txt  AR8.txt  AR9.txt  ARA.txt  ARB.txt  (+16 more)
python-parser/src/: cfg.py  main.py  preprocessor.py
python_parser/src/: mwpreprocessor.py  preprocessor.py
python_preprocessor/: __init__.py  mwpreprocessor.py  preprocessor.py
rust_converter/: Cargo.toml
rust_converter/src/: corpus.rs  lib.rs  preprocessor.py
rust_parser/: Cargo.toml
rust_parser/src/: corpus.rs  main.rs  preprocessor.py
rust_preprocessor/: .gitignore  Cargo.toml  __init__.py  preprocessor.py
rust_preprocessor/src/: corpus.rs  lib.rs
src/: .gitignore  cfg.py  main.py  mwpreprocessor.py  preprocessor.py
toppers/: getToppers.py
(+560 files in other folders)
